--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -29,7 +29,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-tertiary-tint: #6370ff;
 
   /** success **/
-  --ion-color-success: linear-gradient(#fd393a,#f56262);
+  --ion-color-success: #26c526;
   --ion-color-success-rgb: 45, 211, 111;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
